--- a/index.html
+++ b/index.html
@@ -3,19 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meu Site</title>
+    <title>Pride Map</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <header>
-        <h1>Meu Site</h1>
+        <h1>Pride Map</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="login.html">Login / Cadastro</a></li>
                 <li><a href="mapa.html">Mapa</a></li>
                 <li><a href="#faq">FAQ</a></li>
-                <li><a href="#doacoes">Doações</a></li>
                 <li><a href="#duvidas">Dúvidas</a></li>
                 <li><a href="#perfil">Perfil</a></li>
             </ul>
@@ -25,24 +24,20 @@
     <main>
         <section id="faq">
             <h2>Perguntas Frequentes</h2>
-            <p>Algumas perguntas comuns aqui...</p>
-        </section>
-        <section id="doacoes">
-            <h2>Doações</h2>
-            <p>Informações sobre como você pode doar.</p>
+            <p>Aqui será o local para perguntas frequentes e simples dentro do site</p>
         </section>
         <section id="duvidas">
             <h2>Dúvidas</h2>
-            <p>Entre em contato conosco para mais informações.</p>
+            <p>aqui será o local para dúvidas mais complexas, possivelmente necessitando a ajuda de algum administrador.</p>
         </section>
         <section id="perfil">
             <h2>Perfil do Usuário</h2>
-            <p>Visualize e edite seu perfil aqui.</p>
+            <p>Ainda a ser definido</p>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2024 Meu Site. Todos os direitos reservados.</p>
+        <p>&copy; 2024 PrideMap. Todos os direitos reservados.</p>
     </footer>
 </body>
 </html>
